@@ -3,6 +3,7 @@ drlm (2.4.11) stable release; urgency=high
   * Updated Suse 15 ReaR repositories
   * Bugfix in web, holded backups are not shown
   * New install script
+  * Bugfix in installclient adding network interface
 
  -- Pau Roura <pau@brainupdaters.net>  Thu, 07 Dec 2023 00:00:00 +0100
 
